--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,72 +10,48 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
 
-      - name: Package Analytical Lambda function
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install zip tool
+        uses: montudor/action-zip@v1
+
+      - name: Zip Analytic Model Code
         run: |
-          cd src/analytical-model
-          zip -r ../../terraform/lambda-deployment-package-analyse.zip .
-  
-      - name: Package data collection Lambda function
+          cd src/analytic-model
+          zip -r ../../analytic-model.zip .
+          cd ../..
+        shell: bash
+
+      - name: Zip Data Collect Code
         run: |
           cd src/data-collect
-          zip -r ../../terraform/lambda-deployment-package-collect.zip .
-      - name: Package data retrieve Lambda function
+          zip -r ../../data-collect.zip .
+          cd ../..
+        shell: bash
+
+      - name: Zip Data Retrieve Code
         run: |
           cd src/data-retrieve
-          zip -r ../../terraform/lambda-deployment-package-retrieve.zip .
-      - name: List downloaded packages
-        run: ls -la terraform/
+          zip -r ../../data-retrieve.zip .
+          cd ../..
+        shell: bash
 
-      - name: echo AWS credentials
-        run: |
-          echo "aws_access_key_id=$AWS_ACCESS_KEY_ID"
-          echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY"
-          echo "s3_bucket_name=$BUCKET_NAME"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Deploy to AWS Lambda
+        uses: imehedi/actions-awscli-v2@latest
         with:
-          terraform_version: 1.11.2
-
-      - name: Terraform Init
-        run: |
-          cd terraform
-          terraform init
-
-      - name: Terraform Plan
-        run: |
-          cd terraform
-          terraform plan -input=false \
-            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
-            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
-            -var="s3_bucket_name=$BUCKET_NAME" \
-            -var="alert_email=$ALERT_EMAIL"
+          args: |
+            lambda update-function-code \
+              --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-analyse-lambda \
+              --zip-file fileb://analytic-model.zip && \
+            lambda update-function-code \
+              --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-scraper-lambda \
+              --zip-file fileb://data-collect.zip && \
+            lambda update-function-code \
+              --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-retriever-lambda \
+              --zip-file fileb://data-retrieve.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
-          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }} 
-
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' # Only deploy on main branch
-        run: |
-          cd terraform
-          terraform apply -auto-approve -input=false \
-            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
-            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
-            -var="s3_bucket_name=$BUCKET_NAME" \
-            -var="alert_email=$ALERT_EMAIL"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
-          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }} 
+          AWS_DEFAULT_REGION: "us-east-1"
