--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,41 +2,39 @@ name: Continuous Deployment
 
 on:
   workflow_run:
-    workflows: ["Test"]
-    branches: [main]
+    workflows: ["Continuous Integration"]
     types:
       - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Install zip tool
         uses: montudor/action-zip@v1
 
-      - name: Zip Analytic Model Code
+      - name: Zip Analytic Model Lambda
         run: |
           cd src/analytic-model
           zip -r ../../analytic-model.zip .
           cd ../..
-        shell: bash
 
-      - name: Zip Data Collect Code
+      - name: Zip Data Collect Lambda
         run: |
           cd src/data-collect
           zip -r ../../data-collect.zip .
           cd ../..
-        shell: bash
 
-      - name: Zip Data Retrieve Code
+      - name: Zip Data Retrieve Lambda
         run: |
           cd src/data-retrieve
           zip -r ../../data-retrieve.zip .
           cd ../..
-        shell: bash
 
       - name: Deploy to AWS Lambda
         uses: imehedi/actions-awscli-v2@latest
